--- a/MMM-YNAB.css
+++ b/MMM-YNAB.css
@@ -4,13 +4,58 @@
  *
  */
 
- .module.MMM-YNAB .ynab-name {
+.module.MMM-YNAB .ynab-name {
     margin-left: 15px;
     margin-right: 5px;
+    font-weight: 500;
 }
 
 .module.MMM-YNAB .ynab-balance {
     margin-left: 5px;
     margin-right: 15px;
-    color: green;
+    color: #4CAF50;
+    font-weight: bold;
+}
+
+.module.MMM-YNAB .ynab-balance.negative {
+    color: #F44336;
+}
+
+.module.MMM-YNAB .ynab-loading {
+    text-align: center;
+    color: #888;
+    font-style: italic;
+    padding: 10px;
+}
+
+.module.MMM-YNAB .ynab-error {
+    text-align: center;
+    color: #F44336;
+    font-weight: bold;
+    padding: 10px;
+    background-color: rgba(244, 67, 54, 0.1);
+    border-radius: 4px;
+    margin: 5px;
+}
+
+.module.MMM-YNAB .ynab-no-data {
+    text-align: center;
+    color: #888;
+    font-style: italic;
+    padding: 10px;
+}
+
+/* Responsive design for smaller screens */
+@media (max-width: 400px) {
+    .module.MMM-YNAB .ynab-name {
+        margin-left: 10px;
+        margin-right: 3px;
+        font-size: 0.9em;
+    }
+    
+    .module.MMM-YNAB .ynab-balance {
+        margin-left: 3px;
+        margin-right: 10px;
+        font-size: 0.9em;
+    }
 }
