--- a/MMM-YNAB.css
+++ b/MMM-YNAB.css
@@ -74,6 +74,16 @@
     padding: 10px;
 }
 
+.module.MMM-YNAB .ynab-loading-subtle {
+    text-align: center;
+    color: #666;
+    font-size: 0.8em;
+    font-style: italic;
+    padding: 5px 0;
+    margin-top: 5px;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 .module.MMM-YNAB .ynab-error {
     text-align: center;
     color: #F44336;
