--- a/MMM-YNAB.css
+++ b/MMM-YNAB.css
@@ -28,7 +28,8 @@
     margin-top: 10px;
     padding-left: 10px;
     border-left: 2px solid rgba(255, 255, 255, 0.1);
-    transition: all 1s ease-in-out;
+    overflow: hidden;
+    position: relative;
 }
 
 .module.MMM-YNAB .ynab-subsection-title {
@@ -69,10 +70,16 @@
     font-weight: bold;
 }
 
+.module.MMM-YNAB .ynab-transactions-container {
+    transition: transform 1s ease-in-out;
+}
+
 .module.MMM-YNAB .ynab-row.ynab-sub {
     font-size: 0.8em;
     padding: 1px 0;
-    transition: opacity 0.5s ease-in-out;
+    height: 20px; /* Fixed height for consistent animation */
+    display: flex;
+    align-items: center;
 }
 
 .module.MMM-YNAB .ynab-name {
