--- a/MMM-YNAB.css
+++ b/MMM-YNAB.css
@@ -139,6 +139,15 @@
     border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+.module.MMM-YNAB .ynab-last-updated {
+    text-align: right;
+    color: var(--color-text-dimmed);
+    font-size: 0.7em;
+    padding: 3px 0;
+    margin-top: 5px;
+    border-top: 1px solid rgba(255, 255, 255, 0.05);
+}
+
 .module.MMM-YNAB .ynab-error {
     text-align: center;
     color: #F44336;
