--- a/MMM-YNAB.css
+++ b/MMM-YNAB.css
@@ -72,7 +72,7 @@
 }
 
 .module.MMM-YNAB .ynab-transactions-wrapper {
-    height: 70px; /* Reduced from 63px */
+    height: 70px; /* Container height */
     overflow: hidden;
     position: relative;
     margin: 0;
@@ -91,7 +91,7 @@
 .module.MMM-YNAB .ynab-row.ynab-sub {
     font-size: 0.8em;
     padding: 1px 0;
-    height: 20px; /* Reduced from 21px (60px ÷ 3) */
+    height: 23.33px; /* Approximately 70px ÷ 3 rows */
     display: flex;
     align-items: center;
 }
