--- a/MMM-YNAB.css
+++ b/MMM-YNAB.css
@@ -100,6 +100,9 @@
     font-weight: 500;
     text-align: left;
     flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .module.MMM-YNAB .ynab-category {
